# globeado-py

./: .env.example  main.py  pyproject.toml
app/: main.py
app/bot/: commands.py  context.py  globeado_bot.py
app/common/: settings.py  utils.py
scripts/: bootstrap.sh  run_bot.sh
